fixed very weird bug of shopping cart bill shiftin the entire tarot deck header to the left, leaving a white space on the right of screen

--- a/shopping/shopping_cart_style.css
+++ b/shopping/shopping_cart_style.css
@@ -1,8 +1,8 @@
 /* prevents the horizontal scroll that occurs when you open cart */
-body { overflow-x: hidden; }
+body { overflow-x: hidden; max-width: 100vw; margin: 0; padding: 0;}
 
 /* for some reason bootstrap automatically sets the height to 70% of viewport */
-.container-fluid { height: 100vh; }
+/* .container-fluid { height: 100vh; } */
 
 #cart-amount {
  position: relative;
@@ -73,9 +73,10 @@ body { overflow-x: hidden; }
  transform:skew(8deg) rotate(3deg);
 }
 
+.col-12{height: 100vh; clip: auto;}
+
 #bill {
  background-color: #453E3B;
- margin: 0;
  display: none;
  -webkit-animation-name: slideInRight;
  animation-name: slideInRight;
@@ -112,6 +113,7 @@ body { overflow-x: hidden; }
 
 #cost {
  height: 100%;
+ width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
@@ -121,8 +123,9 @@ body { overflow-x: hidden; }
  color: #1c1F25;
 }
 
-button[class="col-6"] {
+#close {
  height: 100%;
+ width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
@@ -138,7 +141,9 @@ button[class="col-6"] {
 }
 
 #costAndClose {
- height: 10%;
+ display: flex;
+ height: 4rem;
+ width: 100%;
 }
 
 @media only screen and (max-width: 500px) {
